--- a/src/components/toheader.css
+++ b/src/components/toheader.css
@@ -4,15 +4,17 @@ header#header-box {
     border-bottom: 1px solid grey;
     border-radius: 1px;
     display: flex;
-}
-header#header-box span {
-    font-size: 12pt;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: white;
+    flex-direction: inherit;
+    align-content: space-between;
 }
 header#header-box button {
-    border-radius: 5px;
-    text-decoration: none;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 5px;
+    border: 1px solid grey;
+    border-radius: 5px;
+    cursor: pointer;
+}
+header#header-box button:hover {
+    border: 1px solid black;
+    transition: 0.3s;
 }
